// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailGebiedenStadsdeel should render everything 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Stadsdeel label"
  title="Stadsdeel"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="Code"
      value="A"
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;

exports[`MapDetailGebiedenStadsdeel should render grex 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[Function]}
  onPanoPreviewClick={[Function]}
  panoUrl="panoUrl"
  subTitle="Stadsdeel label"
  title="Stadsdeel"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="Code"
      value="A"
    />
    <div>
      <h4
        className="map-detail-result__category-title"
      >
        Grondexploitaties
      </h4>
      <ul
        className="map-detail-result__list"
      >
        <MapDetailResultItem
          label="Totale begroting baten"
          value="foo"
        />
        <MapDetailResultItem
          label="Totale begroting kosten"
          value="bar"
        />
        <MapDetailResultItem
          label="Verschil"
          value="abc"
        />
      </ul>
    </div>
  </ul>
</Connect(MapDetailResultWrapper)>
`;
